name:                yuntan-mqtt
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Lupino/yuntan-mqtt#readme
license:             BSD3
license-file:        LICENSE
author:              Li Meng Jun
maintainer:          lmjubuntu@gmail.com
copyright:           MIT
category:            value
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Hummingbird
                     , Hummingbird.Administration.Cli
                     , Hummingbird.Administration.Escape
                     , Hummingbird.Administration.Request
                     , Hummingbird.Administration.Response
                     , Hummingbird.Administration.Server
                     , Hummingbird.YuntanAuthenticator
                     , Hummingbird.Configuration
                     , Hummingbird.Internal
                     , Hummingbird.Logging
                     , Hummingbird.SysInfo
                     , Hummingbird.Terminator
                     , Hummingbird.Transport
                     , Hummingbird.Pkcs8
  build-depends:       base >= 4.7 && < 5
                     , mqtt
                     , aeson
                     , attoparsec
                     , containers
                     , text
                     , uuid

                     , bytestring
                     , binary
                     , parsec
                     , clock
                     , transformers
                     , socket
                     , socket-unix
                     , options
                     , haskeline
                     , base64-bytestring
                     , pem
                     , asn1-types
                     , asn1-parse
                     , asn1-encoding
                     , x509
                     , x509-store
                     , async
                     , tls
                     , networking
                     , data-default
                     , data-default-class
                     , websockets
                     , yaml
                     , unordered-containers
                     , unix
                     , filepath
                     , bcrypt

                     , haxl
                     , yuntan-base
                     , yuntan-base-user
                     , yuntan-common-result
                     , lens
                     , lens-aeson
                     , hslogger
  default-language:    Haskell2010

executable yuntan-mqtt
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , yuntan-mqtt
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Lupino/yuntan-mqtt
