name:                yuntan-mqtt
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Lupino/yuntan-mqtt#readme
license:             BSD3
license-file:        LICENSE
author:              Li Meng Jun
maintainer:          lmjubuntu@gmail.com
copyright:           MIT
category:            value
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Hummingbird
                     , Hummingbird.YuntanAuthenticator
                     , Hummingbird.Configuration
                     , Hummingbird.Internal
                     , Hummingbird.Logging
                     , Hummingbird.Terminator
                     , Hummingbird.Transport
                     , Hummingbird.SysInfo
                     , Hummingbird.Administration.Cli
                     , Hummingbird.Administration.Escape
                     , Hummingbird.Administration.Request
                     , Hummingbird.Administration.Response
                     , Hummingbird.Administration.Server
  build-depends:       base >= 4.7 && < 5
                     , mqtt
                     , aeson
                     , attoparsec
                     , containers
                     , text
                     , uuid

                     , socket
                     , options
                     , async
                     , tls
                     , networking
                     , data-default
                     , data-default-class
                     , websockets
                     , x509
                     , x509-store
                     , yaml
                     , unordered-containers

                     , yuntan-base
                     , wreq
                     , yuntan-common-wreq
                     , yuntan-common-result
                     , hslogger

                     , bytestring
                     , parsec
                     , binary
                     , clock
                     , haskeline
                     , socket-unix
                     , unix
                     , transformers
                     , filepath
  default-language:    Haskell2010

executable yuntan-mqtt
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , yuntan-mqtt
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Lupino/yuntan-mqtt
